# py-auto-login

./: .gitignore  CHANGELOG.md  DEBUG_WORKFLOW.md  GITHUB_BUILD.md  LOCAL_DEBUG.md  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  README_QUICK_START.md  TROUBLESHOOTING.md  browser_manager.py  build.py  config.json.example  config.py  install.sh  lock_manager.py  main.py  ocr_engine.py  pyproject.toml  quick_start.sh  requirements.txt  setup_alias.sh  test_browser.py  test_ocr.py
.github/workflows/: README.md  build-simple.yml  build.yml  manual-build.yml
